# food-scanner

./: .gitignore  MIT
foo/: .gitignore  pubspec.yaml
foo/android/app/: build.gradle.kts
foo/lib/: app.dart  main.dart
foo/lib/src/api/: api_client.dart
foo/lib/src/models/: comment.dart  product.dart  search_result.dart  user.dart
foo/lib/src/pages/authpage/: auth_page.dart
foo/lib/src/pages/goodspage/: product_page.dart
foo/lib/src/pages/historypage/: history_page.dart
foo/lib/src/pages/homepage/: home_page.dart
foo/lib/src/pages/profilepage/: profile_page.dart
foo/lib/src/pages/regpage/: reg_page.dart
foo/lib/src/pages/undefinedpage/: not_ready_page.dart
foo/lib/src/pages/welcomepage/: welcome_page.dart
foo/lib/src/routes/: app_routes.dart  router.dart
foo/lib/src/services/: auth_service.dart  ping.dart  product_service.dart
foo/lib/src/themes/: theme.dart
foo/lib/src/widgets/appBar/: app_searching_bar.dart
foo/lib/src/widgets/commentsBar/: comments_bar.dart
foo/test/: widget_test.dart
foo_backend/: pyproject.toml
foo_backend/src/: dependencies.py  main.py  models.py  router.py
foo_backend/src/comments/: models.py  repository.py  router.py  schemas.py
foo_backend/src/core/: config.py  settings.py
foo_backend/src/history/: models.py  repo.py  router.py  schemas.py
foo_backend/src/product/: models.py  repo.py  router.py  schemas.py  service.py
foo_backend/src/search/: repository.py  router.py  schemas.py
foo_backend/src/user/: models.py  repo.py  router.py  schemas.py  service.py  settings.py
(+6 files in other folders)
